<resources>
    <string name="app_name">Lights</string>
    <string name="title_activity_group">Groups</string>
    <string name="title_activity_lamp_edit">Lamp</string>
    <string name="title_activity_timer_edit">Timer</string>
    <string name="title_activity_group_edit">Group</string>

    <string name="action_new_group">New Group</string>
    <string name="action_edit_group">Edit Group</string>
    <string name="action_delete_group">Delete Group</string>
    <string name="action_qr_share">Share Connection</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="overflow">Overflow</string>
    <string name="new_lamp">New Lamp</string>
    <string name="new_timer">New Timer</string>
    <string name="loading">loading…</string>
    <string name="delete">Delete</string>
    <string name="collapse">Collapse</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unknown_error_check_server_console">Unknown error. Check server console.</string>
    <string name="confirmation">Confirmation</string>
    <string name="delete_confirm">Do you want to delete `%s`?</string>
    <string name="set_time">Set Time</string>

</resources>
