<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.android305.lights.GroupActivity">

    <item
        android:id="@+id/action_add_group"
        android:orderInCategory="100"
        android:title="@string/action_new_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_edit_group"
        android:orderInCategory="101"
        android:title="@string/action_edit_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_delete_group"
        android:orderInCategory="102"
        android:title="@string/action_delete_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_qr_share"
        android:orderInCategory="103"
        android:title="@string/action_qr_share"
        android:icon="@drawable/ic_action_qr"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
